--- a/wiki_to_neo4j_backend/build.gradle
+++ b/wiki_to_neo4j_backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.8'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'checkstyle'
 }
 
 group = 'com.example'
@@ -30,4 +31,13 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+checkstyle {
+	toolVersion = '10.16.0'
+	configFile = file('config/checkstyle/checkstyle.xml')
+	configProperties = [
+		'checkstyle.cache.file': "${buildDir}/checkstyle/cachefile"
+	]
+	ignoreFailures = true
 }
