--- a/wiki_to_neo4j_backend/src/main/resources/application.properties
+++ b/wiki_to_neo4j_backend/src/main/resources/application.properties
@@ -24,5 +24,5 @@ springdoc.swagger-ui.tagsSorter=alpha
 # Respect X-Forwarded-* / Forwarded headers so redirects preserve external scheme/host/port
 server.forward-headers-strategy=framework
 
-# Respect X-Forwarded-* / Forwarded headers so redirects preserve external scheme/host/port
-server.forward-headers-strategy=framework
+# Server Port
+server.port=3001
